[BE] FEAT 백엔드 코드 최신화